Revert "Merge branch 'Prodvalidation' of https://github.com/Cloud-Peritus-Inc/EMS into Prodvalidation"
This reverts commit 1c88cf8bad7cf188bdfbcc7b94a2050cbabc4b12, reversing
changes made to 149c81271395ff703336221045eebf2f841b32f6.

--- a/force-app/main/default/layouts/EMS_LM_Leave_Credit__c-Leave Credit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/EMS_LM_Leave_Credit__c-Leave Credit Layout.layout-meta.xml
@@ -16,15 +16,15 @@
                 <field>EMS_LM_Employee__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>EMS_LM_Leave_Type__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>EMS_LM_Leaves_Credited__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Required</behavior>
+                <behavior>Edit</behavior>
                 <field>EMS_LM_Leave_Credited_Date__c</field>
             </layoutItems>
         </layoutColumns>
