Deploy changes to QA

--- a/force-app/main/default/layouts/EMS_TM_Assignment__c-Assignment Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/EMS_TM_Assignment__c-Assignment Layout.layout-meta.xml
@@ -20,7 +20,7 @@
                 <field>EMS_TM_AssignedAs__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Readonly</behavior>
+                <behavior>Edit</behavior>
                 <field>EMS_TM_Status_Asgn__c</field>
             </layoutItems>
         </layoutColumns>
