--- a/force-app/main/default/layouts/Contact-Resource.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-Resource.layout-meta.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
-    <excludeButtons>DataDotComClean</excludeButtons>
-    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <feedLayout>
         <autocollapsePublisher>true</autocollapsePublisher>
@@ -127,14 +125,6 @@
                 <behavior>Edit</behavior>
                 <field>AccountId</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Override_the_standard_level_of_approval__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Level_of_Approval__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -168,10 +158,6 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Trailblazer_ID_or_Public_URL__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Timesheet_NoNeed__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -434,21 +420,30 @@
         </relatedContentItems>
     </relatedContent>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Resource_Reports_To__c</fields>
         <fields>Reports_To_Role__c</fields>
+        <fields>Resource_Role__c</fields>
+        <fields>OBJECT_ID</fields>
         <relatedList>Resource_Resource_Relationship__c.Resource__c</relatedList>
+        <sortField>OBJECT_ID</sortField>
+        <sortOrder>Asc</sortOrder>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>EMS_TM_ProjectName_Asgn__c</fields>
         <fields>EMS_TM_Status_Asgn__c</fields>
         <fields>EMS_TM_Billable__c</fields>
+        <fields>EMS_TM_StartDate_Asgn__c</fields>
+        <fields>EMS_TM_EndDate_Asgn__c</fields>
         <relatedList>EMS_TM_Assignment__c.EMS_TM_EmployeeName__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Resource_Name__c</fields>
@@ -457,6 +452,7 @@
         <relatedList>EMS_Timesheet__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>EMS_LM_Leave_Type__c</fields>
@@ -465,6 +461,7 @@
         <relatedList>EMS_LM_Leave_History__c.EMS_LM_Contact__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>EMS_LM_Leave_Type__c</fields>
@@ -473,6 +470,7 @@
         <relatedList>EMS_LM_Leave_Credit__c.EMS_LM_Employee__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Goal_Name__c</fields>
@@ -481,6 +479,7 @@
         <relatedList>Goal__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Type__c</fields>
@@ -489,12 +488,14 @@
         <relatedList>Certifications__c.Contact__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>RECORDTYPE</fields>
         <relatedList>ems_EM_Additional_Detail__c.ContactId__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Family_Member_Name__c</fields>
@@ -504,6 +505,8 @@
         <relatedList>Family_Information__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>NewCase</excludeButtons>
         <fields>CASES.CASE_NUMBER</fields>
         <fields>CASES.SUBJECT</fields>
         <fields>CASES.CREATED_DATE</fields>
@@ -511,20 +514,21 @@
         <relatedList>Case.Case_Assignee__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Expense_Amount__c</fields>
         <fields>Status__c</fields>
         <relatedList>Expense__c.Resource__c</relatedList>
     </relatedLists>
     <relatedLists>
+        <excludeButtons>MassChangeOwner</excludeButtons>
+        <excludeButtons>New</excludeButtons>
         <fields>NAME</fields>
         <fields>Award_Type__c</fields>
         <fields>Comments__c</fields>
         <fields>Fiscal_Year__c</fields>
         <relatedList>Reward_And_Recognition__c.Resource__c</relatedList>
-    </relatedLists>
-    <relatedLists>
-        <relatedList>RelatedFileList</relatedList>
     </relatedLists>
     <relatedObjects>AccountId</relatedObjects>
     <showEmailCheckbox>false</showEmailCheckbox>
