--- a/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
@@ -52,7 +52,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Amount__c</field>
+                <field>Amount1__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
