--- a/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
+++ b/force-app/main/default/layouts/Contact-Resource-HR.layout-meta.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Layout xmlns="http://soap.sforce.com/2006/04/metadata">
+    <excludeButtons>DataDotComClean</excludeButtons>
+    <excludeButtons>RequestUseSfdc</excludeButtons>
     <excludeButtons>Submit</excludeButtons>
     <layoutSections>
         <customLabel>true</customLabel>
@@ -439,7 +441,11 @@
         <fields>NAME</fields>
         <fields>Resource_Reports_To__c</fields>
         <fields>Reports_To_Role__c</fields>
+        <fields>Resource_Role__c</fields>
+        <fields>OBJECT_ID</fields>
         <relatedList>Resource_Resource_Relationship__c.Resource__c</relatedList>
+        <sortField>OBJECT_ID</sortField>
+        <sortOrder>Asc</sortOrder>
     </relatedLists>
     <relatedLists>
         <excludeButtons>New</excludeButtons>
@@ -447,6 +453,8 @@
         <fields>EMS_TM_ProjectName_Asgn__c</fields>
         <fields>EMS_TM_Status_Asgn__c</fields>
         <fields>EMS_TM_Billable__c</fields>
+        <fields>EMS_TM_StartDate_Asgn__c</fields>
+        <fields>EMS_TM_EndDate_Asgn__c</fields>
         <relatedList>EMS_TM_Assignment__c.EMS_TM_EmployeeName__c</relatedList>
     </relatedLists>
     <relatedLists>
