--- a/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Expense__c-Expense - HR %2COperations Layout.layout-meta.xml
@@ -32,10 +32,6 @@
                 <behavior>Edit</behavior>
                 <field>Status__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Amount1__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -54,13 +50,10 @@
                 <behavior>Edit</behavior>
                 <field>Billable__c</field>
             </layoutItems>
-<<<<<<< Updated upstream
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Amount1__c</field>
             </layoutItems>
-=======
->>>>>>> Stashed changes
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -158,7 +151,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h52000003zbpF</masterLabel>
+        <masterLabel>00h52000004Jatp</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
