--- a/force-app/main/default/layouts/Fulfillment__c-Fulfillment Layout - HR.layout-meta.xml
+++ b/force-app/main/default/layouts/Fulfillment__c-Fulfillment Layout - HR.layout-meta.xml
@@ -104,6 +104,7 @@
     <relatedLists>
         <excludeButtons>MassChangeOwner</excludeButtons>
         <excludeButtons>New</excludeButtons>
+        <fields>NAME</fields>
         <fields>Goal_Name__c</fields>
         <fields>RECORDTYPE</fields>
         <fields>Status__c</fields>
