--- a/force-app/main/default/lwc/mynominations/mynominations.css
+++ b/force-app/main/default/lwc/mynominations/mynominations.css
@@ -41,7 +41,7 @@
 	color: white; font-size:9pt;
   font-weight: 2px;
 	padding-top: 0px;
-    background: tomato;
+  background: #7F8DE1;
  }
 
 .contacttableFixHead {
