--- a/force-app/main/default/lwc/scroingaward/scroingaward.css
+++ b/force-app/main/default/lwc/scroingaward/scroingaward.css
@@ -116,7 +116,7 @@
 	color: white; font-size:9pt;
   font-weight: 2px;
 	padding-top: 0px;
-    background: cornflowerblue;
+  background: #7F8DE1;
  }
 
 .contacttableFixHead {
